# tls-sig-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_debug_x64.bat  build_debug_x86.bat  build_release_x64.bat  build_release_x86.bat
example/: CMakeLists.txt
example/cpp/: tls_licence_tools.cpp
example/cs/: CMakeLists.txt  csdemo.cs
example/cs/Properties/: AssemblyInfo.cs
example/java/: CMakeLists.txt  Demo.java
src/: base64.cpp  base64_url.cpp  com_tls_sigcheck_tls_sigcheck.cpp  com_tls_sigcheck_tls_sigcheck.h  opensslthreadlock.cpp  sigcheck.cpp  sigcheck.h  signature.cpp  tls_licence_tools.cpp  tls_signature.cpp  tls_signature.h
test/: unit_test.cpp
